# QtChatRoom

./: CMakeLists.txt  chat.cpp  chat.h  chat.ui  login.cpp  login.h  login.ui  main.cpp  message.cpp  message.h  message.ui
icon/: icon.qrc
